fix double-scrollbar issue (or at least, hope to fix it)

--- a/app.css
+++ b/app.css
@@ -29,7 +29,7 @@ overflow-y:scroll;
 #content {
 float:left;
 padding:40px;
-height:calc(100% - 2 * 40px);
+height:calc(100% - 2 * 40px - 2px);
 width:calc(100% - 300px - 2 * 30px - 2 * 40px - 2px);
 }
 .view {
